Page MenuHome GnuPG

HTTP 5xx should fail over to the next server
Closed, ResolvedPublic

Description

I use the SKS pool. Currently my dirmngr is selecting a server that accepts connections but returns a HTTP 502 error to any request. When that happens, dirmngr immediately gives up and returns "no data".

Instead, HTTP 5xx ("server error") responses should cause a retry to another server from the pool – just as if the server were completely down.

2018-10-09 20:41:30 dirmngr[24717.6] DBG: chan_6 <- KS_GET -- 0x18ECDA46CBF6BAC6
2018-10-09 20:41:30 dirmngr[24717.6] DBG: chan_6 -> S PROGRESS tick ? 0 0
2018-10-09 20:41:31 dirmngr[24717.6] error accessing 'https://5.9.137.111:443/pks/lookup?op=get&options=mr&search=0x18ECDA46CBF6BAC6': http status 502
2018-10-09 20:41:31 dirmngr[24717.6] command 'KS_GET' failed: No data
2018-10-09 20:41:31 dirmngr[24717.6] DBG: chan_6 -> ERR 167772218 No data <Dirmngr>

Details

Version
2.2.10